@@ -13,7 +13,7 @@ softwareDescription=Sistema de administraci\u00f3n comercial
 softwareIcon=/iconos/kf.png
 unassigned.caja=Debe tener al menos una Caja asignada para realizar esta acci\u00f3n.
 unassigned.sucursal=Debe tener al menos una Sucursal asignada para realizar esta acci\u00f3n.
-help.impuestosrecuperables=<html>Los impuestos <b>Recuperables</b> son<br>aquellos cuyo monto generan cr\u00e9dito fisca.</html>
-help.impuestosnorecuperables=<html>Los impuestos <b>NO Recuperables</b> no generan cr\u00e9dito<br>fisca para la empresa, son gastos.<br>Ej: Impuestos de otras provincias</html>
+help.impuestosrecuperables=<html>Los impuestos <b>Recuperables</b> son<br>aquellos cuyo monto generan cr\u00e9dito fiscal.</html>
+help.impuestosnorecuperables=<html>Los impuestos <b>NO Recuperables</b> no generan cr\u00e9dito<br>fisca para la empresa, son gastos (chau! tu plata).<br>Ej: Impuestos de otras provincias</html>
 info.newsucursal=<html>Las Sucursales nuevas por defecto no est\u00e1n asignadas a ning\u00fan usuario (incluso quien la creo). <br>Para asignar permisos de acceso a estas, debe ir a: <br>Men\u00fa -> Usuarios -> ABM Usuarios -> Seleccionar el usuario -> Modificar y seleccione las Sucursales <br>en la tabla inferior. </html>
 info.unidaddenegociosempty=Debe crear al menos una Unidad de Negocios
